# aster-rust

./: .gitignore  .goosehints  ACCEPTABLE_USAGE.md  AGENTS.md  BUILDING_DOCKER.md  BUILDING_LINUX.md  CONTRIBUTING.md  CONTRIBUTING_RECIPES.md  Cargo.toml  Dockerfile  GOVERNANCE.md  HOWTOAI.md  Justfile  README.md  RELEASE.md  SECURITY.md  TOOL_ALIGNMENT_PLAN.md  download_cli.ps1  download_cli.sh  flake.nix  goose-self-test.yaml  run_cross_local.md  test_acp_client.py  test_multimodal_read.py
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: qa.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  submit-recipe.yml
.github/workflows/: build-cli.yml  bundle-desktop-intel.yml  bundle-desktop-linux.yml  bundle-desktop-windows.yml  bundle-desktop.yml  canary.yml  ci.yml  docs-update-recipe-ref.yml  goose-issue-solver.yml  goose-pr-reviewer.yml  nightly.yml  pr-comment-build-cli.yml  pr-comment-bundle-intel.yml  pr-comment-bundle-windows.yml  pr-comment-bundle.yml  pr-smoke-test.yml  pr-website-preview.yml  publish-docker.yml  release-branches.yml  release.yml  test-finder.yml  update-hacktoberfest-leaderboard.yml
.husky/: pre-commit
clippy-baselines/: too_many_lines.txt
crates/aster/: Cargo.toml
crates/aster-a2ui/: Cargo.toml  README.md
crates/aster-a2ui/src/: catalog.rs  common.rs  functions.rs  lib.rs  protocol.rs  validation.rs
crates/aster-bench/: Cargo.toml  README.md
crates/aster-bench/src/: bench_config.rs  bench_session.rs
crates/aster-cli/: .gitignore  Cargo.toml  WEB_INTERFACE.md
crates/aster-cli/src/: cli.rs  logging.rs  main.rs  project_tracker.rs
crates/aster-cli/static/: index.html  script.js
crates/aster-mcp/: Cargo.toml  README.md
crates/aster-mcp/examples/: mcp.rs
crates/aster-mcp/src/: lib.rs
crates/aster-mcp/src/autovisualiser/: mod.rs
crates/aster-mcp/src/computercontroller/: mod.rs
crates/aster-mcp/src/computercontroller/platform/: windows.rs
crates/aster-mcp/src/developer/: rmcp_developer.rs  shell.rs
crates/aster-mcp/src/developer/analyze/: traversal.rs
crates/aster-mcp/src/developer/editor_models/: EDITOR_API_EXAMPLE.md  mod.rs
crates/aster-mcp/src/memory/: mod.rs
crates/aster-mcp/src/tutorial/: mod.rs
crates/aster-mcp/src/tutorial/tutorials/: build-mcp-extension.md
crates/aster-server/: ALLOWLIST.md  Cargo.toml
crates/aster-server/src/: configuration.rs  error.rs  logging.rs  main.rs  openapi.rs  state.rs
crates/aster-test/: Cargo.toml
crates/aster/examples/: agent.rs  databricks_oauth.rs  image_tool.rs
crates/aster/src/: lib.rs  model.rs  posthog.rs  scheduler.rs  session_context.rs  tool_inspection.rs
crates/aster/tests/: acp_integration_test.rs  agent.rs  agents_alignment_integration_tests.rs  bash_tool_property_tests.rs  common.rs  context_integration_tests.rs  file_tool_property_tests.rs  mcp_integration_test.rs  mcp_wrapper_property_tests.rs  permission_audit_property_tests.rs  permission_condition_property_tests.rs  permission_enum_compatibility_property_tests.rs  permission_import_export_property_tests.rs  permission_manager_property_tests.rs  (+16 more)
docs/: improvement-from-openclaw.md  module-maturity.md
docs/aiprompts/: agent-architecture.md  agent-context.md  aster-apps.md  background.md  bench.md  blueprint.md  checkpoint.md  chrome-mcp.md  cli-usage.md  codesign.md  config-system.md  context-management.md  context.md  conversation.md  desktop-app.md  diagnostics.md  error-handling.md  execution.md  extension.md  git-integration.md  github.md  hints.md  hooks.md  lsp.md  map.md  mcp-integration.md  media.md  memory.md  monitoring.md  network.md  notifications.md  oauth.md  overview.md  parallel-execution.md  parser.md  permission.md  plan.md  plugins.md  prompt.md  providers.md  (+23 more)
docs/prd/: beads-task-graph.md  skills-workflow-extension.md
examples/: frontend_tools.py
recipe-scanner/: Dockerfile  base_recipe.yaml  config.yaml  decode-training-data.py  scan-recipe.sh
scripts/: README.md  check-no-native-tls.sh  goose-db-helper.sh  parse-benchmark-results.sh  run-benchmarks.sh  test_compaction.sh  test_lead_worker.sh  test_mcp.sh  test_providers.sh  test_subrecipes.sh  test_web.sh
scripts/provider-error-proxy/: README.md  proxy.py  pyproject.toml
ui/desktop/: .env  .gitignore  .goosehints  README.md  forge.config.ts  forge.rpm.desktop  index.html  openapi.json  package.json  vite.renderer.config.mts
ui/install-link-generator/: index.html  script.js
ui/tauri/: Cargo.toml  README.md  index.html  package.json  tauri.conf.json
ui/tauri/src/: App.tsx  commands.rs  lib.rs  main.rs  state.rs  styles.css  tray.rs
ui/tauri/src/components/: Chat.tsx  Sidebar.tsx
(+592 files in other folders)
