[package]
name = "aster-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lints]
workspace = true

[features]
default = ["mcp-developer", "mcp-computercontroller"]
mcp-developer = [
    "dep:xcap",
    "dep:tree-sitter",
    "dep:tree-sitter-python",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-go",
    "dep:tree-sitter-java",
    "dep:tree-sitter-kotlin",
    "dep:devgen-tree-sitter-swift",
    "dep:tree-sitter-ruby",
    "dep:rayon",
]
mcp-computercontroller = [
    "dep:lopdf",
    "dep:docx-rs",
    "dep:image",
    "dep:umya-spreadsheet",
]
utoipa = ["dep:utoipa"]

[dependencies]
rmcp = { workspace = true, features = ["server", "client", "transport-io", "macros"] }
anyhow = "1.0.94"
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
url = "2.5"
base64 = "0.21"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
lazy_static = "1.5"
shellexpand = "3.1.0"
indoc = "2.0.5"
xcap = { version = "=0.4.0", optional = true }
reqwest = { workspace = true, features = [
    "json",
    "rustls-tls-native-roots",
] }
async-trait = "0.1.89"
chrono = { version = "0.4.38", features = ["serde"] }
etcetera = { workspace = true }
tempfile = "3.8"
include_dir = "0.7.4"
webbrowser = {workspace = true} 
http-body-util = "0.1.2"
regex = "1.11.1"
once_cell = "1.20.2"
ignore = { workspace = true }
lopdf = { version = "0.36.0", optional = true }
docx-rs = { version = "0.4.7", optional = true }
image = { version = "0.24.9", optional = true }
umya-spreadsheet = { version = "2.2.3", optional = true }
keyring = { version = "3.6.2", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
    "vendored",
] }
oauth2 = { version = "5.0.0", features = ["reqwest"] }
utoipa = { version = "4.1", optional = true }
hyper = "1"
serde_with = "3"
which = {workspace = true} 
glob = "0.3"
lru = "0.12"
tree-sitter = { version = "0.21", optional = true }
tree-sitter-python = { version = "0.21", optional = true }
tree-sitter-rust = { version = "0.21", optional = true }
tree-sitter-javascript = { version = "0.21", optional = true }
tree-sitter-go = { version = "0.21", optional = true }
tree-sitter-java = { version = "0.21", optional = true }
tree-sitter-kotlin = { version = "0.3.8", optional = true }
devgen-tree-sitter-swift = { version = "0.21.0", optional = true }
tree-sitter-ruby = { version = "0.21.0", optional = true }
streaming-iterator = "0.1"
rayon = { version = "1.10", optional = true }
libc = "0.2"
# TODO: Fork mpatch or replace with a custom implementation using `similar` crate
# for fuzzy patch matching. Current crate has limited maintenance (single maintainer,
# ~1000 downloads). Pinned to exact version to prevent supply chain attacks.
mpatch = "=0.2.0"
tokio-util = "0.7.16"
clap = { version = "4", features = ["derive"] }


[dev-dependencies]
serial_test = "3.0.0"
sysinfo = "0.32.1"
temp-env = "0.3.6"
colored = "2"
